--- a/index.html
+++ b/index.html
@@ -25,31 +25,29 @@
 
         <section>
             <h2>Skills</h2>
-
             <div class="flex_container">
                 <article class="skill_article">
                     <h3>Communication</h3>
                         <ul>
-                            <li>파이썬3.8의 자료형과 조건문, 루프 등을 이해하고 프로젝트에 적용할 수 있습니다.</li>
-                            <li>장고의 MTV패턴을 이해하고 실제 프로젝트를 진행할 수 있습니다.</li>
-                            <li>MySQL의 쿼리문을 이해하고 적용할 수 있습니다.</li>
+                            <li>인턴쉽 진행 중 PM을 맡아 팀원들과의 소통을 주도하였습니다.</li>
+                            <li>PR기반의 코드리뷰 및 개발자 & 비개발자들과의 협업을 좋아합니다.</li>
+                            <li>프로젝트의 협업툴은 Trello와 Slack을 사용하였습니다.</li>
+                            <li><span>함께 일하고 싶은 개발자</span>가 되기 위해 노력합니다.</li>
                         </ul>
                 </article>
 
                 <article class="skill_article">
-                    <h3>Back-End<br/> & Database Stack</h3>
+                    <h3>Back-End<br/>Database Stack</h3>
                     <div class="skill_img_div">
                         <img src="images/python.png" alt="Python">
                         <img src="images/django.png" alt="Django">
                         <img src="images/mysql.png" alt="MySQL">
                     </div>
-                    <div class="skill_string_div">
                         <ul>
                             <li>파이썬3.8의 자료형과 조건문, 루프 등을 이해하고 프로젝트에 적용할 수 있습니다.</li>
                             <li>장고의 MTV패턴을 이해하고 실제 프로젝트를 진행할 수 있습니다.</li>
                             <li>MySQL의 쿼리문을 이해하고 적용할 수 있습니다.</li>
                         </ul>
-                    </div>
                 </article>
 
                 <article class="skill_article">
@@ -93,11 +91,11 @@
             </article>
 
             <article class="project_article">
-                <h3>기업협업 [Dneuro]</h3>
+                <h3>Dneuro[인턴쉽]</h3>
                 <p>AI 자산관리 로보어드바이저 서비스를 하는 핀테크 기업으로,
                 기존 서비스 로직에서 고객 프로파일링 및 포트폴리오 API를 수정하고
                 유저별 포트폴리오 리스트를 보여주는 로직을 추가하였습니다.</p>
-                <p>프로젝트 기간 2021.04.12 ~ 2021.05.06</p>
+                <p>백엔드 개발자 / 2021.04.12 ~ 2021.05.06</p>
                 <h4>What did I do</h4>
                 <p>[Portfolio API, Profiling API 개발]</p>
                 <ul>
@@ -114,7 +112,7 @@
                 <p>Back-end : 2명, Front-end : 3명으로 진행 된 프로젝트로,<br/>
                 영화 추천 서비스인 왓챠피디아를 모티브로 사이트를 구현했습니다.<br/>
                 프로젝트 기간 동안 PR을 기반으로 코드 리뷰를 받으며 진행했습니다.</p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/65SivG9_epo?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="videowrapper"><iframe width="560" height="315" src="https://www.youtube.com/embed/65SivG9_epo?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <p>프로젝트 기간 2021.03.29 ~ 2021.04.09(2주)</p>
                 <h4>What did I do</h4>
                 <p>[User API 개발]</p>
@@ -148,7 +146,7 @@
         </section>
 
         <section>
-            <article class="contact_article">
+            <div class="contact_article">
                 <h3>CONTACT</h3>
                 <p>Phone : 010.9402.6454</p>
                 <p>Email : choiinah@kakao.com</p>
@@ -156,7 +154,7 @@
                     <a href="https://github.com/InahChoi" target="_blank"><img src="images/github2.png" alt="github"></a>
                     <a href="https://velog.io/@inah-_-" title="velog 구경가기" target="_blank"><img src="images/velog.jpeg" alt="velog"></a>
                 </div>
-            </article>
+            </div>
         </section>
     </div>
 </body>
