--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                         <img src="images/mysql.png" alt="MySQL">
                     </div>
                         <ul>
+                            <li>미니콘다를 사용하여 프로젝트별 가상환경 초기세팅이 가능합니다.</li>
                             <li>파이썬3.8의 자료형과 조건문, 루프 등을 이해하고 프로젝트에 적용할 수 있습니다.</li>
                             <li>장고의 MTV패턴을 이해하고 실제 프로젝트를 진행할 수 있습니다.</li>
                             <li>MySQL의 쿼리문을 이해하고 적용할 수 있습니다.</li>
@@ -91,11 +92,13 @@
             </article>
 
             <article class="project_article">
-                <h3>Dneuro[인턴쉽]</h3>
+                <h3>Dneuro[백엔드 개발자 인턴쉽]</h3>
+                <p>인턴쉽 기간 2021.04.12 ~ 2021.05.06<br/>
+                기술스택 : Python3 Django MySQL AWS</p>
                 <p>AI 자산관리 로보어드바이저 서비스를 하는 핀테크 기업으로,
                 기존 서비스 로직에서 고객 프로파일링 및 포트폴리오 API를 수정하고
                 유저별 포트폴리오 리스트를 보여주는 로직을 추가하였습니다.</p>
-                <p>백엔드 개발자 / 2021.04.12 ~ 2021.05.06</p>
+
                 <h4>What did I do</h4>
                 <p>[Portfolio API, Profiling API 개발]</p>
                 <ul>
@@ -105,15 +108,24 @@
                     <li>유저가 채택한 Portfolio를 List로 보여주는 API 개발</li>
                     <li>Portfolio_id를 URL Parameter로 넘겨 요청 된 Portfolio의 데이터 반환</li>
                 </ul>
+                <h4>좋았던 점</h4>
+                <p>백엔드 개발자로서 한 기업에 경험을 쌓으러 갔다는 점이 정말 좋았습니다.<br/>
+                기업에서 어떤 부분을 맡아 일을 하는 가?
+                에 대해 많은 궁금증이 풀렸습니다.<br/>프로젝트를 논의하고 방향성을 함께 맞춰가는 과정이 재미있었습니다.</p>
+                <h4>아쉬웠던 점</h4>
+                <p>기획과 디자인이 없고 개발자들만 있는 상황에서 기획 단계에 시간을 많이 할애한 것이 조금 아쉬웠습니다.<br/>
+                하지만 기획이 변경되는 건 웹퍼블리셔로 근무할 때에 많이 겪어 보았기 때문에<br/>좋은 결과가 나올 수 있었던 것 같습니다.</p>
             </article>
 
             <article class="project_article">
                 <h3>WatChaPedia Project</h3>
+                <p>프로젝트 기간 2021.03.29 ~ 2021.04.09(2주)<br/>
+                기술스택 : Python3 Django MySQL AWS</p>
                 <p>Back-end : 2명, Front-end : 3명으로 진행 된 프로젝트로,<br/>
                 영화 추천 서비스인 왓챠피디아를 모티브로 사이트를 구현했습니다.<br/>
                 프로젝트 기간 동안 PR을 기반으로 코드 리뷰를 받으며 진행했습니다.</p>
                 <div class="videowrapper"><iframe width="560" height="315" src="https://www.youtube.com/embed/65SivG9_epo?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-                <p>프로젝트 기간 2021.03.29 ~ 2021.04.09(2주)</p>
+
                 <h4>What did I do</h4>
                 <p>[User API 개발]</p>
                 <ul>
@@ -125,15 +137,22 @@
                     <li>사용자가 평가한 영화들의 별점 수를 보여주는 myPage API 개발</li>
                     <li>TDD 적용하여 User App 관련 각 API UnitTest 완료</li>
                 </ul>
+                <h4>좋았던 점</h4>
+                <p>1차로 진행됐던 프로젝트보다 프로젝트에 대한 이해도가 높아져 프론트분들과의 협업에서 좀 더 수월했습니다.<br/>
+                데이터베이스 모델링부터 API 개발, 프론트분들과 맞춰보는 과정까지 즐기면서 임했습니다.</p>
+                <h4>아쉬웠던 점</h4>
+                <p>위코드에서의 마지막 프로젝트라는 점이 아쉬웠습니다. 그 점을 제외하고는 아쉬웠던 점이 없던 것 같습니다.</p>
+                <a href="https://velog.io/@inah-_-/ProjectWatcha-Pedia-TeamProject" target="_blank"><p>프로젝트 회고</p></a>
             </article>
 
             <article class="project_article">
                 <h3>Lush Project</h3>
+                <p>프로젝트 기간 2021.03.15 ~ 2021.03.26(2주)<br/>
+                기술스택 : Python3 Django MySQL AWS</p>
                 <p>Back-end: 3명, Front-end : 3명으로 진행 된 프로젝트로,<br/>
                 영국의 스파 브랜드인 러쉬를 모티브로 사이트를 구현하였습니다.<br/>
                 프로젝트 기간 동안 PR을 기반으로 코드 리뷰를 받으며 진행했습니다.</p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/5bo_7Ud_IBE?start=99" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p>프로젝트 기간 2021.03.15 ~ 2021.03.26(2주)</p>
                 <h4>What did I do</h4>
                 <p>[Product API 개발]</p>
                 <ul>
@@ -142,6 +161,14 @@
                     <li>상품 상세 정보를 보여주는 Product Detail API를 Path parameter로 RESTful하게 구현</li>
                     <li>csv파일 생성하여 Python으로 DB에 데이터를 추가하는 Upload 개발</li>
                 </ul>
+                <h4>좋았던 점</h4>
+                <p>혼자 학습하는 시기를 지나고 백엔드 개발자로서 처음으로 프로젝트를 하게되어<br/>
+                팀원들과 함께 협업하고 의견을 맞춰가는 과정이 너무 즐거웠습니다.</p>
+                <h4>아쉬웠던 점</h4>
+                <p>처음 Front와 Back간의 소통이 부족하여 진행 속도가 맞지 않는 상황이 있었는데,<br/>
+                남은 몇일을 소통과 진행 속도를 맞추며 협업하는 방법을 배우는 것에 초점을 두어<br/>
+                무사히 프로젝트를 마칠 수 있었습니다.</p>
+                <a href="https://velog.io/@inah-_-/Project-Lush-Clone-TeamProject" target="_blank"><p>프로젝트 회고</p></a>
             </article>
         </section>
 
