--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>InahChoi Resume</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" thpe="text/css" href="css/media.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="icon" type="image/png" sizes="16x16"  href="/favicons/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
