ADD : images / MODIFY : index.html, main.css

--- a/index.html
+++ b/index.html
@@ -56,10 +56,14 @@
                 <article class="skill_article">
                     <h3>Sub Stack</h3>
                     <div class="skill_img_div">
+                        <img src="images/typescript.png" alt="ts">
+                        <img src="images/node.png" alt="node.js">
+                        <img src="images/mongoDB.png" alt="NoSQL_mongoDB">
                         <img src="images/html5.png" alt="HTML5">
                         <img src="images/css3.png" alt="CSS3">
                     </div>
-                    <ul>
+                    <ul>    
+                        <li>Typescript와 Node.js로 간단한 API를 개발한 경험이 있습니다.</li>
                         <li>시맨틱 마크업을 준수하기 위해 노력합니다.</li>
                         <li>다양한 플랫폼 및 브라우저를 지원할 수 있습니다.</li>
                     </ul>              
@@ -69,10 +73,12 @@
                     <h3>DevOps & Tooling</h3>
                     <div class="skill_img_div">
                         <img src="images/aws.png" alt="AWS">
-                        <img src="images/github.png" alt="Notion">
+                        <img src="images/docker.png" alt="Docker">
+                        <img src="images/github.png" alt="git">
                     </div>
                     <ul>
                         <li>AWS의 EC2, RDS를 통해 프로젝트를 배포한 경험이 있습니다.</li>
+                        <li>Docker로 image를 build하고 배포한 경험이 있습니다.</li>
                         <li>Git Flow를 이해하고 Git을 활용하여 협업할 수 있습니다.</li>
                         <li>여러 협업툴에 빠르게 적응할 수 있습니다.</li>
                     </ul>
