--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
       <article class="project_article">
         <h3>뉴로서킷[백엔드 개발자]</h3>
         <p>개발팀 / 2021.11 ~ 2022 ing <br />
-          기술스택 : Javascript Nodejs MongoDB MariaDB AWS S3
+          <span style="font-weight: bold;">기술스택</span> <br />Javascript [Nodejs.v14.17.3,
+          express.v4.18]<br />Database
+          [mariadb.v10.6, mongodb.v5.0]<br />
+          Cloud [Atlas, RDS, S3, EC2]
         </p>
         <h4>회사기여도</h4>
         <ul>
@@ -123,7 +126,7 @@
           <li>백엔드 서버 EC2 배포</li>
         </ul>
         <h4>수출 앱 API</h4>
-        <p>일본 내 규모가 있는 탈모회사인 Reve21에 앱을 수출하고 투자 및 데이터를 받는 프로젝트였습니다.</p>
+        <p>일본 내 규모가 있는 탈모 회사인 Reve21에 앱을 수출하고 투자 및 데이터를 제공 받는 프로젝트입니다.</p>
         <ul>
           <li>회원관리 [회원가입, 로그인, 회원메인, 회원알람 등]</li>
           <li>미션관리 [회원의 미션 달성 퍼센트, 회원 당일 미션 등]</li>
@@ -132,23 +135,18 @@
           <li>상담관리 [회원이 상담 등록 시 담당자에게 이메일 발송]</li>
           <li>알람관리 [회원 알람 ON/OFF 여부를 판단하여 회원이 원하는 알람 시간을 받아 알람 발송]</li>
         </ul>
-        <h4>뉴로서킷 사내 CMS</h4>
+        <!-- <h4>사내 탈모 앱 API</h4>
+        <p>탈모의 진행률을 늦추고 올바른 습관을 형성하는 탈모 진단 앱 프로젝트입니다.</p>
+        <ul>
+          <li>탈모 솔루션 관리 []</li>
+        </ul> -->
+        <h4>사내 CMS</h4>
         <p>CMS 프로젝트 내에서 앱&웹 API를 관리하고 기초데이터를 넣을 수 있는 관리자 페이지를 개발하여 운영 중입니다.</p>
+        <img src="/images/cms.png" alt="cms" width="80%">
         <ul>
           <li>수출 앱 API 관리 [회원, 미션, 포인트, 상품, 상담, 알람 등]</li>
           <li>사내 바야바즈 앱 API 관리 [회원, 뉴스, 상담, 솔루션, 알람 등]</li>
           <li>담당자들의 권한 별로 CMS 페이지 메뉴 관리</li>
-        </ul>
-      </article>
-
-      <article class="project_article">
-        <h3>구인터내셔널[웹퍼블리셔]</h3>
-        <p>온라인 지원부 / 2018.11 ~ 2021.01</p>
-        <ul>
-          <li>온라인몰 홈페이지 디자인 및 퍼블리싱을 담당하였습니다.</li>
-          <li>
-            개발직군 외 다른 직군에 계신 분들과 많은 협업을 경험했습니다.
-          </li>
         </ul>
       </article>
 
@@ -179,7 +177,7 @@
             반환
           </li>
         </ul>
-        <h4>좋았던 점</h4>
+        <!-- <h4>좋았던 점</h4>
         <p>
           백엔드 개발자로서 한 기업에 경험을 쌓으러 갔다는 점이 정말
           좋았습니다.<br />
@@ -193,7 +191,7 @@
           많이 할애한 것이 조금 아쉬웠습니다.<br />
           하지만 기획이 변경되는 건 웹퍼블리셔로 근무할 때에 많이 겪어 보았기
           때문에<br />좋은 결과가 나올 수 있었던 것 같습니다.
-        </p>
+        </p> -->
       </article>
 
       <article class="project_article">
@@ -233,7 +231,7 @@
           <li>사용자가 평가한 영화들의 별점 수를 보여주는 myPage API 개발</li>
           <li>TDD 적용하여 User App 관련 각 API UnitTest 완료</li>
         </ul>
-        <h4>좋았던 점</h4>
+        <!-- <h4>좋았던 점</h4>
         <p>
           1차로 진행됐던 프로젝트보다 프로젝트에 대한 이해도가 높아져
           프론트분들과의 협업에서 좀 더 수월했습니다.<br />
@@ -244,7 +242,7 @@
         <p>
           위코드에서의 마지막 프로젝트라는 점이 아쉬웠습니다. 그 점을
           제외하고는 아쉬웠던 점이 없던 것 같습니다.
-        </p>
+        </p> -->
         <a href="https://velog.io/@inah-_-/ProjectWatcha-Pedia-TeamProject" target="_blank">
           <p>프로젝트 회고</p>
         </a>
@@ -280,7 +278,7 @@
             csv파일 생성하여 Python으로 DB에 데이터를 추가하는 Upload 개발
           </li>
         </ul>
-        <h4>좋았던 점</h4>
+        <!-- <h4>좋았던 점</h4>
         <p>
           혼자 학습하는 시기를 지나고 백엔드 개발자로서 처음으로 프로젝트를
           하게되어<br />
@@ -293,11 +291,24 @@
           남은 몇일을 소통과 진행 속도를 맞추며 협업하는 방법을 배우는 것에
           초점을 두어<br />
           무사히 프로젝트를 마칠 수 있었습니다.
-        </p>
+        </p> -->
         <a href="https://velog.io/@inah-_-/Project-Lush-Clone-TeamProject" target="_blank">
           <p>프로젝트 회고</p>
         </a>
       </article>
+
+      <article class="project_article">
+        <h3>구인터내셔널[웹퍼블리셔]</h3>
+        <p>온라인 지원부 / 2018.11 ~ 2021.01</p>
+        <ul>
+          <li>온라인몰 홈페이지 디자인 및 퍼블리싱을 담당하였습니다.</li>
+          <li>
+            개발직군 외 다른 직군에 계신 분들과 많은 협업을 경험했습니다.
+          </li>
+        </ul>
+      </article>
+
+
     </section>
     <section class="experience_section">
       <h2>Other Experiences</h2>
